--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
+        "laravel/nova": "~4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/nova": "~4.0"
+        "stepanenko3/nova-json": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
