--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/nova": "~4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "stepanenko3/nova-json": "^3.1"
+        "stepanenko3/nova-json": "^3.1",
+        "inovuz/file-esteroids": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -73,6 +74,10 @@
         "nova": {
             "type": "composer",
             "url": "https://nova.laravel.com"
+        },
+        "0": {
+            "type": "path",
+            "url": "./nova-components/FileEsteroids"
         }
     }
 }
