--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
         "php": "^8.1",
         "codenco-dev/nova-grid-system": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "inovuz/file-esteroids": "@dev",
         "laravel/framework": "^10.8",
         "laravel/nova": "~4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "stepanenko3/nova-json": "^3.1",
-        "inovuz/file-esteroids": "@dev"
+        "maatwebsite/excel": "^3.1",
+        "simonhamp/laravel-nova-csv-import": "^0.4.0",
+        "stepanenko3/nova-json": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
