--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "acme/color-picker": "@dev",
         "codenco-dev/nova-grid-system": "^2.0",
+        "formfeed-uk/nova-dependable-panel": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
+        "inovuz/card-file": "@dev",
         "inovuz/file-esteroids": "@dev",
         "laravel/framework": "^10.8",
         "laravel/nova": "~4.0",
@@ -18,8 +21,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
-        "stepanenko3/nova-json": "^3.1",
-        "inovuz/card-file": "@dev"
+        "stepanenko3/nova-json": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -89,6 +91,10 @@
         "2": {
             "type": "path",
             "url": "./nova-components/CardFile"
+        },
+        "3": {
+            "type": "path",
+            "url": "./nova-components/ColorPicker"
         }
     }
 }
