--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "build-file-esteroids": "cd nova-components/FileEsteroids && npm run dev",
         "build-file-esteroids-prod": "cd nova-components/FileEsteroids && npm run prod",
         "build-card-file": "cd nova-components/CardFile && npm run dev",
-        "build-card-file-prod": "cd nova-components/CardFile && npm run prod"
+        "build-card-file-prod": "cd nova-components/CardFile && npm run prod",
+        "build-color-picker": "cd nova-components/ColorPicker && npm run dev",
+        "build-color-picker-prod": "cd nova-components/ColorPicker && npm run prod"
     },
     "devDependencies": {
         "axios": "^1.1.2",
