--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "oneduo/nova-file-manager": "^0.9.2",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
         "stepanenko3/nova-json": "^3.1"
     },
