--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,20 @@
         "formfeed-uk/nova-dependable-panel": "^1.2",
         "formfeed-uk/nova-logo-url": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "inovuz/boolean-switcher": "@dev",
         "inovuz/card-file": "@dev",
         "inovuz/file-esteroids": "@dev",
+        "inovuz/file-kmz": "@dev",
         "laravel/framework": "^10.8",
         "laravel/nova": "~4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "norman-huth/nova-radio-field": "^1.1",
         "oneduo/nova-file-manager": "^0.9.2",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
-        "stepanenko3/nova-json": "^3.1"
+        "stepanenko3/nova-json": "^3.1",
+        "trin4ik/nova-switcher": "^0.3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -97,6 +101,14 @@
         "3": {
             "type": "path",
             "url": "./nova-components/ColorPicker"
+        },
+        "4": {
+            "type": "path",
+            "url": "./nova-components/FileKmz"
+        },
+        "5": {
+            "type": "path",
+            "url": "./nova-components/BooleanSwitcher"
         }
     }
 }
