--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "maatwebsite/laravel-nova-excel": "^1.3",
         "norman-huth/nova-radio-field": "^1.1",
         "oneduo/nova-file-manager": "^0.9.2",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
