--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "build-file-kmz": "cd nova-components/FileKmz && npm run dev",
         "build-file-kmz-prod": "cd nova-components/FileKmz && npm run prod",
         "build-boolean-switcher": "cd nova-components/BooleanSwitcher && npm run dev",
-        "build-boolean-switcher-prod": "cd nova-components/BooleanSwitcher && npm run prod"
+        "build-boolean-switcher-prod": "cd nova-components/BooleanSwitcher && npm run prod",
+        "build-custom-grid-system": "cd nova-components/CustomGridSystem && npm run dev",
+        "build-custom-grid-system-prod": "cd nova-components/CustomGridSystem && npm run prod"
     },
     "devDependencies": {
         "axios": "^1.1.2",
