--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "oneduo/nova-file-manager": "^0.9.2",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
         "stepanenko3/nova-json": "^3.1",
-        "trin4ik/nova-switcher": "^0.3.0"
+        "trin4ik/nova-switcher": "^0.3.0",
+        "inovuz/custom-grid-system": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -110,6 +111,10 @@
         "5": {
             "type": "path",
             "url": "./nova-components/BooleanSwitcher"
+        },
+        "6": {
+            "type": "path",
+            "url": "./nova-components/CustomGridSystem"
         }
     }
 }
