--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "maatwebsite/laravel-nova-excel": "^1.3",
         "norman-huth/nova-radio-field": "^1.1",
         "oneduo/nova-file-manager": "^0.9.2",
+        "php-junior/nova-logs": "^1.1",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
         "stepanenko3/nova-json": "^3.1",
         "trin4ik/nova-switcher": "^0.3.0"
