--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.3",
+        "nemrutco/nova-global-filter": "^1.3",
         "norman-huth/nova-radio-field": "^1.1",
         "oneduo/nova-file-manager": "^0.9.2",
         "php-junior/nova-logs": "^1.1",
