--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "build-custom-grid-system": "cd nova-components/CustomGridSystem && npm run dev",
         "build-custom-grid-system-prod": "cd nova-components/CustomGridSystem && npm run prod",
         "build-panel-esteroids": "cd nova-components/PanelEsteroids && npm run dev",
-        "build-panel-esteroids-prod": "cd nova-components/PanelEsteroids && npm run prod"
+        "build-panel-esteroids-prod": "cd nova-components/PanelEsteroids && npm run prod",
+        "build-map-kmz": "cd nova-components/MapKmz && npm run dev",
+        "build-map-kmz-prod": "cd nova-components/MapKmz && npm run prod"
     },
     "devDependencies": {
         "axios": "^1.1.2",
