--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,15 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "maatwebsite/laravel-nova-excel": "^1.3",
+        "naoray/nova-json": "dev-nova-4 || ^2.1",
         "nemrutco/nova-global-filter": "^1.3",
         "norman-huth/nova-radio-field": "^1.1",
         "norman-huth/nova-resource-card": "^1.0",
         "oneduo/nova-file-manager": "^0.9.2",
         "php-junior/nova-logs": "^1.1",
         "simonhamp/laravel-nova-csv-import": "^0.4.0",
-        "stepanenko3/nova-json": "^3.1",
-        "trin4ik/nova-switcher": "^0.3.0"
+        "trin4ik/nova-switcher": "^0.3.0",
+        "inovuz/map-kmz": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -89,6 +90,10 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "repositories": {
+        "nova-json": {
+            "type": "git",
+            "url": "https://github.com/gisostallenberg/nova-json"
+        },
         "nova": {
             "type": "composer",
             "url": "https://nova.laravel.com"
@@ -124,6 +129,10 @@
         "7": {
             "type": "path",
             "url": "./nova-components/PanelEsteroids"
+        },
+        "8": {
+            "type": "path",
+            "url": "./nova-components/MapKmz"
         }
     }
 }
